[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://background.png" type="Texture" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://MainScene.gd" type="Script" id=4]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 4 )
enemy_scene = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 514, 298 )
scale = Vector2( 1.305, 1.03833 )
texture = ExtResource( 2 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 532, 485 )

[node name="enemyTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="Canvas"]
anchor_left = -0.164063
anchor_right = 0.123047
margin_left = 167.0
margin_top = 192.0
margin_right = 899.0
margin_bottom = 289.0
custom_fonts/font = SubResource( 1 )
text = "Fuja dos inimigos"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="Canvas"]
anchor_right = 0.0292969
margin_left = 269.0
margin_top = 362.0
margin_right = 773.0
margin_bottom = 465.0
custom_fonts/font = SubResource( 1 )
text = "Iniciar Jogo"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Score" type="Label" parent="Canvas"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "Score: 0"

[node name="ScoreTimer" type="Timer" parent="."]

[connection signal="area_entered" from="player" to="." method="_on_player_area_entered"]
[connection signal="timeout" from="enemyTimer" to="." method="_on_enemyTimer_timeout"]
[connection signal="button_down" from="Canvas/Button" to="." method="_on_Button_button_down"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
